 2011-05-04 23:00  asfernandes 
   M src/isql/isql.epp
Backported fix for CORE-1782 - ISQL crashes when fetching data for a column having alias longer than 30 characters.

 2011-04-21 20:25  asfernandes 
   M src/jrd/unicode_util.cpp
Fixed CORE-3447 - Collation is not installed with icu > 4.2.

 2011-04-13 10:28  hvlad 
   M src/jrd/event.cpp
Fixed bug CORE-3440 : AV in engine if isc_que_events queued 0 events

 2011-04-01 21:07  asfernandes 
   M src/jrd/met.epp
Fixed CORE-3426 - Inactive system triggers after fix for CORE-3418.

 2011-03-30 23:06  hvlad 
   M src/jrd/met.epp
Fixed bug CORE-3418 : Inactive DB-trigger after Create/Alter Is Active

 2011-03-29 00:57  asfernandes 
   M extern/btyacc/main.c
Fixed memory corruption in btyacc code.

 2011-03-22 13:14  alexpeshkoff 
   M src/common/classes/alloc.h
   M src/include/fb_exception.h
Make it build with fresh gcc versions - backported from 2.5 redefinition of operator new

 2011-03-18 17:48  alexpeshkoff 
   M src/jrd/os/posix/mod_loader.cpp
Fixed CORE-3397: Unresolved symbols in intl and trace libraries

 2011-03-17 14:02  alexpeshkoff 
   M configure.in
Fixed s390 linux port error

 2011-03-17 11:23  hvlad 
   M src/jrd/idx.cpp
Fixed bug CORE-3394 : Failed attempt to violate unique constraint could leave unneeded "lock conflict" error in status-vector.
Backported more conservative version of patch

 2011-03-16 13:06  paulbeach 
   M builds/posix/prefix.darwin_powerpc
   M builds/posix/prefix.darwin_ppc64
Minor mod to allow 2.1.4 to build successfully

 2011-03-16 08:04  alexpeshkoff 
   M src/jrd/scl.epp
Fixed CORE-3388: Does not build on fedore core

 2011-03-04 17:59  dimitr 
   M src/jrd/vio.cpp
The simplest possible fix for CORE-3374: Server may crash or corrupt data if SELECT WITH LOCK is issued against records not in the latest format. Thanks to Vlad.

 2011-02-22 12:21  dimitr 
   M src/jrd/Optimizer.cpp
   M src/jrd/btr.cpp
   M src/jrd/opt.cpp
Better solution for CORE-3355, as suggested by Vlad.
